--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
         <!-- Table above $2B -->
         <tr><th>$2B+</th></tr>
-        <tr><td><a href="http://www.chippercash.com/" target="_blank">Chipper Cash</a></td><td>Fintech</td><td>Africa&nbsp;</td><td>Payments</td></tr>
-        <tr><td><a href="http://www.chippercash.com/" target="_blank">Chipper Cash</a></td><td>Fintech</td><td>Africa&nbsp;</td><td>Payments</td></tr>
+        <tr><td><a href="http://www.chippercash.com/" target="_blank">Chipper Cash</a></td><td>Fintech</td><td>Africa&nbsp;</td><td>Payments</td><td>Microsoft, Google</td></tr>
 
 
         <!-- Table between $1b and $2B -->
