--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <tr><td><a href="http://www.soundingboardinc.com" target="_blank">Sounding Board</a></td><td>HR</td><td>US</td><td>SaaS, ML, Human Resource Automation</td></tr>
         <tr><td><a href="http://www.zesty.com" target="_blank">Zesty</a></td><td>Cloud</td><td>Israel</td><td>Cloud Management</td></tr>
         <tr><td><a href="http://www.getbanyan.com" target="_blank">Banyan</a></td><td>Fintech</td><td>US</td><td>Big Data / SaaS</td></tr>
-        <tr><td><a href="http://www.range.co" target="_blank">Range</a></td><td>Developer Tools &nbsp;</td><td>US</td><td>SaaS, Collaboration, Communications Software</td><td>Microsoft, Google</td></tr>
+        <tr><td><a href="http://www.range.co" target="_blank">Range</a></td><td>Developer Tools &nbsp;</td><td>US</td><td>SaaS, Collaboration, Communications Software</td></tr>
         <tr><td><a href="http://www.scripbox.com" target="_blank">Scripbox</a></td><td>Fintech</td><td>India</td><td>Wealth Management</td></tr>
         <tr><td><a href="http://www.questbook.app" target="_blank">Questbook</a></td><td>Web3</td><td>India</td><td>Decentralized University</td></tr>
         <tr><td><a href="https://www.myjar.app/" target="_blank">Jar</a></td><td>Fintech</td><td>India</td><td>Savings / Financial Management</td></tr>
