--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class=row>
         <div class="column">
     <div class="column-left">
-        <a href="index.html"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
+        <a href="index.html"><img class="logo" src="/KUBE Logo-Wht - Cyan.png" alt="kube-logo" ></a>
         <p class="main-description">Kube VC is a global venture firm that backs exceptional founders and category-defining businesses.</p>
         <a class="button" href="mailto:faiz@kubevc.com" >info@kubevc.com</a>
     </div>
@@ -26,8 +26,8 @@
 <div class="column">
     <div class="column-right">
     <div class="navbar">
-        <a class="nav-a" href="#">Portfolio</a>
-        <a class="nav-a" href="#">Network</a>
+        <a class="nav-a" href="portfolio.html">Portfolio</a>
+        <a class="nav-a" href="network.html">Network</a>
       </div>
     <div class="table-div">
     <table>
@@ -128,7 +128,7 @@
         <tr><td><a href="https://www.creditbook.pk/" target="_blank">CreditBook</a></td><td>Fintech</td><td>Pakistan</td><td>Payments / Lending / Digital Ledger</td></tr>
         <tr><td><a href="https://letz.app/en" target="_blank">Letz</a></td><td>Transport</td><td>Latam</td><td>Urban Mobility</td></tr>
         <tr><td><a href="https://www.dopay.com/" target="_blank">Dopay</a></td><td>Fintech</td><td>MENA</td><td>Payments</td></tr>
-        <tr><td><a href="https://enaible.io/" target="_blank">Enaible</a></td><td>AI / ML</td><td>US</td><td>Employee Productivty SaaS</td></tr>
+        <!-- <tr><td><a href="https://enaible.io/" target="_blank">Enaible</a></td><td>AI / ML</td><td>US</td><td>Employee Productivty SaaS</td></tr>
         <tr><td><a href="https://clicoh.com/" target="_blank">Clicoh</a></td><td>Logistics</td><td>Latam</td><td>e-Commerce</td></tr>
         <tr><td><a href="https://www.faction.us/" target="_blank">Faction Motors</a></td><td>EV</td><td>Global</td><td>Mobility</td></tr>
         <tr><td><a href="https://tryterra.co/" target="_blank">Terra</a></td><td>Healthcare</td><td>Global</td><td>Fitness / API</td></tr>
@@ -178,11 +178,14 @@
         <tr><td><a href="https://www.supersourcing.com" target="_blank">Supersourcing</a></td><td>HR</td><td>India</td><td>Outsourcing, HR / Recruiting</td></tr>
         <tr><td><a href="http://www.priceoye.pk" target="_blank">PriceOye</a></td><td>e-Commerce</td><td>Pakistan</td><td>Marketplace / Logistics</td></tr>
         <tr><td><a href="https://www.bankingly.com" target="_blank">Bankingly</a></td><td>Fintech</td><td>Global</td><td>Digital Banking APIs</td></tr>
-        <tr><td><a href="https://betterfuturetech.co/" target="_blank">Piggy</a></td><td>Crypto</td><td>Global</td><td>Bitcoin Mortgage Platform</td></tr>
+        <tr><td><a href="https://betterfuturetech.co/" target="_blank">Piggy</a></td><td>Crypto</td><td>Global</td><td>Bitcoin Mortgage Platform</td></tr> -->
 
 
 
         </table>
+    </div>
+    <div class="all-companies">
+        <a class="all-companies-btn" href="portfolio.html">View all companies..</a>
     </div>
 </div>
 </div>
