--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div class="column">
     <div class="column-right">
     <div class="navbar">
-        <a class="nav-a" href="https://github.com/Shamseer88/Kube-Ventures/blob/main/network.html">Portfolio</a>
+        <a class="nav-a" href="portfolio.html">Portfolio</a>
         <a class="nav-a" href="network.html">Network</a>
       </div>
     <div class="table-div">
