--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class=row>
         <div class="column">
     <div class="column-left">
-        <a href="index.html"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png" alt="kube-logo" ></a>
+        <a href="index.html"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
         <p class="main-description">Kube VC is a global venture firm that backs exceptional founders and category-defining businesses.</p>
         <a class="button" href="mailto:faiz@kubevc.com" >info@kubevc.com</a>
     </div>
