--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <div class="column">
     <div class="column-right">
     <div class="navbar">
-        <a class="nav-a" href="portfolio.html">Portfolio</a>
-        <a class="nav-a" href="network.html">Network</a>
+        <a class="nav-a" href="/Kube-Ventures/portfolio.html">Portfolio</a>
+        <a class="nav-a" href="/Kube-Ventures/network.html">Network</a>
       </div>
     <div class="table-div">
     <table>
