--- a/portfolio.html
+++ b/portfolio.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div class="navbar-portfolio">
-        <a href="/index.html"><img class="small-logo" src="/KUBE Logo-Wht - Cyan.png" alt="logo"></a>
-        <a class="active" href="/portfolio.html">Portfolio</a>
-        <a class="nav-a" href="network.html">Network</a>
+        <a href="/Kube-Ventures/index.html"><img class="small-logo" src="/KUBE Logo-Wht - Cyan.png" alt="logo"></a>
+        <a class="active" href="/Kube-Ventures/portfolio.html">Portfolio</a>
+        <a class="nav-a" href="/Kube-Ventures/network.html">Network</a>
       </div>
       <div>
           <h1 class="portfolio-heading">PORTFOLIO</h1>
