--- a/network.html
+++ b/network.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="navbar-portfolio">
-        <a href="/Kube-Ventures/index.html"><img class="small-logo" src="/KUBE Logo-Wht - Cyan.png" alt="logo"></a>
+        <a href="/Kube-Ventures/index.html"><img class="small-logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="logo"></a>
         <a class="nav-a" href="/Kube-Ventures/portfolio.html">Portfolio</a>
         <a class="active" href="/Kube-Ventures/network.html">Network</a>
       </div>
