--- a/network.html
+++ b/network.html
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div class="navbar-portfolio">
-        <a href="/Kube-Ventures/index.html"><img class="small-logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="logo"></a>
-        <a class="nav-a" href="/Kube-Ventures/portfolio.html">Portfolio</a>
-        <a class="active" href="/Kube-Ventures/network.html">Network</a>
+        <a href="/index.html"><img class="small-logo" src="/KUBE Logo-Wht - Cyan.png" alt="logo"></a>
+        <a class="nav-a" href="/portfolio.html">Portfolio</a>
+        <a class="active" href="/network.html">Network</a>
       </div>
       <div>
           <h1 class="portfolio-heading">NETWORK</h1>
@@ -42,7 +42,7 @@
             <!-- Table between $500m and $750M -->
             <tr><th>$500M &#8211; $1B</th></tr>
             <tr><td><a href="http://www.piepfy.com" target="_blank">Pipefy</a></td><td>Workflow Management</td><td>Insight Partners, Founders Fund, One VC, Redpoint eVentures, Softbank, Steadfast Capital, Endeavour Catalyst, OpenView, Trinity Ventures</td></tr>
-            <tr><td><a href="http://www.khatabook.com" target="_blank">KhattaBook</a></td><td>Digital Ledger / Accounting</td><td>Sequioa, B Capital Group, Better Capital, Digital Horizon, Hummingbird Ventures, RTP Global</td></tr>
+            <tr><td><a href="http://www.khatabook.com" target="_blank">KhattaBook</a></td><td>Digital Ledger / Accounting&nbsp;&nbsp;</td><td>Sequioa, B Capital Group, Better Capital, Digital Horizon, Hummingbird Ventures, RTP Global</td></tr>
     
     
             <!-- Table between $250M and $500M -->
