--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
 
         </table>
     </div>
-    <div class="all-companies">
-        <a class="all-companies-btn" href="portfolio.html">View all companies..</a>
+    <div class="all-companies-btn-div">
+        <a class="all-companies-btn" href="/portfolio.html">View all companies....</a>
     </div>
 </div>
 </div>
