--- a/network.html
+++ b/network.html
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body{
+            margin-bottom: 50px;
+        }
+    </style>
     <title>Network- Kube Ventures</title>
 </head>
 <body>
