--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </table>
     </div>
     <div class="all-companies-btn-div">
-        <a class="all-companies-btn" href="/portfolio.html">View all companies....</a>
+        <a class="all-companies-btn" href="/Kube-Ventures/portfolio.html">View all companies....</a>
     </div>
 </div>
 </div>
