--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Kube Ventures</title>
 </head>
@@ -18,75 +19,73 @@
     <div class=row>
         <div class="column">
     <div class="column-left">
-        <a href="index.html"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
-        <p class="main-description">Kube VC is a global venture firm that backs exceptional founders and category-defining businesses.</p>
+        <a href="index.html"><img class="logo" src="/KUBE Logo-Wht - Cyan.png" alt="kube-logo" ></a>
+        <p class="main-description">Kube VC is a global venture firm <br>that backs exceptional founders and category-defining businesses.</p>
         <a class="button" href="mailto:faiz@kubevc.com" >info@kubevc.com</a>
     </div>
 </div>
 <div class="column">
     <div class="column-right">
     <div class="navbar">
-        <a class="nav-a" href="/Kube-Ventures/portfolio.html">Portfolio</a>
-        <a class="nav-a" href="/Kube-Ventures/network.html">Network</a>
+        <a class="nav-a" href="portfolio.html">Portfolio</a>
+        <!-- <a class="nav-a" href="network.html">Network</a> -->
       </div>
     <div class="table-div">
     <table>
 
 
         <!-- Table above $2B -->
-        <tr><th>$2B+</th></tr>
-        <tr><td><a href="http://www.chippercash.com/" target="_blank">Chipper Cash</a></td><td>Fintech</td><td>Africa&nbsp;</td><td>Payments</td></tr>
+        <tr><th colspan="2">$2B+</th></tr>
+        <tr><td><a href="http://www.chippercash.com/" target="_blank">Chipper Cash</a></td><td>Fintech</td><td>Africa&nbsp;</td><td>Payments</td><td>Deciens Capital, FTX, Ribbit Capital, SVB, Tribe Capital, Bezos Expeditions, One Way Ventures</td></tr>
 
 
         <!-- Table between $1b and $2B -->
-        <tr><th>$1B &#8211; $2B</th></tr>
-        <tr><td><a href="http://www.shippo.com/" target="_blank">Shippo</a></td><td>Logistics</td><td>US</td><td>e-Commerce</td></tr>
-        <tr><td><a href="http://www.shipbob.com" target="_blank">Shipbob</a></td><td>Logistics</td><td>US</td><td>e-Commerce</td></tr>
+        <tr><th colspan="2">$1B &#8211; $2B</th></tr>
+        <tr><td><a href="http://www.shippo.com/" target="_blank">Shippo</a></td><td>Logistics</td><td>US</td><td>e-Commerce</td><td>Bessemer Venture Partners, Uncork Capital, Union Square Ventures, D1 Capital Partners, Version One Ventures</td></tr>
+        <tr><td><a href="http://www.shipbob.com" target="_blank">Shipbob</a></td><td>Logistics</td><td>US</td><td>e-Commerce</td><td>Softbank, Bain Capital Ventures, Hyde Park Venture, Menlo Ventures, SVB, Yc, FJ Labs</td></tr>
 
 
         <!-- Table between $500m and $750M -->
-        <tr><th>$500M &#8211; $1B</th></tr>
-        <tr><td><a href="http://www.piepfy.com" target="_blank">Pipefy</a></td><td>Developer Tools</td><td>Global</td><td>Workflow Management</td></tr>
-        <tr><td><a href="http://www.khatabook.com" target="_blank">KhattaBook</a></td><td>Fintech</td><td>India</td><td colspan="2">Digital Ledger / Accounting</td></tr>
+        <tr><th colspan="2">$500M &#8211; $1B</th></tr>
+        <tr><td><a href="http://www.piepfy.com" target="_blank">Pipefy</a></td><td>Developer Tools</td><td>Global</td><td>Workflow Management</td><td>Insight Partners, Founders Fund, One VC, Redpoint eVentures, Softbank, Steadfast Capital, Endeavour Catalyst, OpenView, Trinity Ventures</td></tr>
+        <tr><td><a href="http://www.khatabook.com" target="_blank">KhattaBook</a></td><td>Fintech</td><td>India</td><td>Digital Ledger / Accounting</td><td>Sequioa, B Capital Group, Better Capital, Digital Horizon, Hummingbird Ventures, RTP Global</td></tr>
 
 
         <!-- Table between $250M and $500M -->
-        <tr><th>$250M &#8211; $500M</th></tr>
-        <tr><td><a href="http://www.starzplay.com" target="_blank">Starz Play</a></td><td>Media</td><td>MENA</td><td> <span class='ticker'>OTT Platform</td></tr>
-        <tr><td><a href="https://lingokids.com/" target="_blank">Lingokids</a></td><td>EdTech</td><td>Global</td><td>Play Learning</td></tr>
-        <tr><td><a href="http://www.wahedinvest.com" target="_blank">Wahed Invest</a></td><td>Fintech</td><td>Global</td><td>Wealth Management</td></tr>
-        <tr><td><a href="https://bukukas.co.id/" target="_blank">BukuKas</a></td><td>Fintech</td><td>Indonesia&nbsp;</td><td>Banking</td></tr>
-        <tr><td><a href="https://www.teachmint.com/" target="_blank">Teachmint</a></td><td>EdTech</td><td>India</td><td>Tutoring</td></tr>
-        <tr><td><a href="https://www.wayflyer.com/" target="_blank">WayFlyer</a></td><td>e-Commerce</td><td>US</td><td>Finance</td></tr>
+        <tr><th colspan="2">$250M &#8211; $500M</th></tr>
+        <tr><td><a href="http://www.starzplay.com" target="_blank">Starz Play</a></td><td>Media</td><td>MENA</td><td>OTT Platform</td><td>Starz Entertaintment, State Street Global Advisors, Delta Partners</td></tr>
+        <tr><td><a href="https://lingokids.com/" target="_blank">Lingokids</a></td><td>EdTech</td><td>Global</td><td>Play Learning</td><td>GP Bullhound, HV Capital, Invertidos, Ravensburger, All Iron Ventures, JME Ventures, Athos Capital, 500 Startups</td></tr>
+        <tr><td><a href="http://www.wahedinvest.com" target="_blank">Wahed Invest</a></td><td>Fintech</td><td>Global</td><td>Wealth Management</td><td>Saudi Aramco, Beco Capital, Dubai Cultiv8, Cue Ball</td></tr>
+        <tr><td><a href="https://bukukas.co.id/" target="_blank">BukuKas</a></td><td>Fintech</td><td>Indonesia&nbsp;</td><td>Banking</td><td>Sequioa, January Capital, Gokul Rajaram, Endeavour Catalyst, Alter Global, Saison Capital, Cambium Grove, Founder Bank Capital</td></tr>
+        <tr><td><a href="https://www.teachmint.com/" target="_blank">Teachmint</a></td><td>EdTech</td><td>India</td><td>Tutoring</td><td>Learn Capital, Lightspeed, Epiq Capital, Vulcan Capital, Rocketship.vc</td></tr>
+        <tr><td><a href="https://www.wayflyer.com/" target="_blank">WayFlyer</a></td><td>e-Commerce</td><td>US</td><td>Finance</td><td>DST Global, Left Lane Capital, QED, Speed Invest, Bias Capital, Middlegame Ventures</td></tr>
 
 
         <!-- Table between $100M and $250M -->
-        <tr><th>$100M &#8211; $250M</th></tr>
-        <tr><td><a href="http://www.fundersclub.com" target="_blank">FundersClub</a></td><td>Finance</td><td>US</td><td>Crowd Funding</td></tr>
-        <tr><td><a href="http://www.scentbird.com" target="_blank">ScentBird</a></td><td>Consumer</td><td>US</td><td>e-Commerce</td></tr>
-        <tr><td><a href="https://www.foodology.com.co/" target="_blank">Foodology</a></td><td>Cloud Kitchens</td><td>Latam</td><td>Food Tech</td></tr>
-        <tr><td><a href="https://chingari.io/" target="_blank">Chingari</a></td><td>Consumer</td><td>India</td><td>Social Media</td></tr>
-        <tr><td><a href="https://landing.chiper.co/" target="_blank">Chiper</a></td><td>e-Commerce</td><td>Latam</td><td>B2B</td></tr>
-        <tr><td><a href="https://www.treinta.co/" target="_blank">Trienta</a></td><td>Fintech</td><td>Latam</td><td>Digital Ledger / Accounting</td></tr>
-        <tr><td><a href="https://www.protenus.com/" target="_blank">Protenus</a></td><td>Healthcare</td><td>US</td><td>Analytics / AI</td></tr>
-        <tr><td><a href="http://www.array.io" target="_blank">Array</a></td><td>Fintech</td><td>US</td><td>Credit / Lending</td></tr>
-        <tr><td><a href="http://www.loco.gg" target="_blank">Loco</a></td><td>Gaming</td><td>India</td><td>Live Streaming Platform</td></tr>
-        <tr><td><a href="http://www.yassir.com" target="_blank">Yassir</a></td><td>Mobility</td><td>Africa</td><td>Ride Sharing</td></tr>
-        <tr><td><a href="http://www.candidco.com" target="_blank">Candid</a></td><td>Healthcare</td><td>US</td><td> Personal Health</td></tr>
-        <tr><td><a href="https://www.toothfairyapp.co.uk/" target="_blank">ToothFairy</a></td><td>Healthcare</td><td>UK</td><td>Personal Health</td></tr>
-        <tr><td><a href="http://www.soundingboardinc.com" target="_blank">Sounding Board</a></td><td>HR</td><td>US</td><td>SaaS, ML, Human Resource Automation</td></tr>
-        <tr><td><a href="http://www.zesty.com" target="_blank">Zesty</a></td><td>Cloud</td><td>Israel</td><td>Cloud Management</td></tr>
-        <tr><td><a href="http://www.getbanyan.com" target="_blank">Banyan</a></td><td>Fintech</td><td>US</td><td>Big Data / SaaS</td></tr>
-        <tr><td><a href="http://www.range.co" target="_blank">Range</a></td><td>Developer Tools &nbsp;</td><td>US</td><td>SaaS, Collaboration, Communications Software</td></tr>
-        <tr><td><a href="http://www.scripbox.com" target="_blank">Scripbox</a></td><td>Fintech</td><td>India</td><td>Wealth Management</td></tr>
-        <tr><td><a href="http://www.questbook.app" target="_blank">Questbook</a></td><td>Web3</td><td>India</td><td>Decentralized University</td></tr>
-        <tr><td><a href="https://www.myjar.app/" target="_blank">Jar</a></td><td>Fintech</td><td>India</td><td>Savings / Financial Management</td></tr>
-        <tr><td><a href="https://tagme.pk/" target="_blank">TAG</a></td><td>Fintech</td><td>Pakistan</td><td>Digital Banking</td></tr>
+        <tr><th colspan="2">$100M &#8211; $250M</th></tr>
+        <tr><td><a href="http://www.fundersclub.com" target="_blank">FundersClub</a></td><td>Finance</td><td>US</td><td>Crowd Funding</td><td>a16z,First Round Capital, Felicis Ventures, Digital Garage, Dtribe Capital</td></tr>
+        <tr><td><a href="http://www.scentbird.com" target="_blank">ScentBird</a></td><td>Consumer</td><td>US</td><td>e-Commerce</td><td>YC, Scrum Ventures, Goodwater Capital, FundersClub, Rainfall Ventures</td></tr>
+        <tr><td><a href="https://www.foodology.com.co/" target="_blank">Foodology</a></td><td>Cloud Kitchens</td><td>Latam</td><td>Food Tech</td><td>a16z, Base Partners, Flucas Ventures</td></tr>
+        <tr><td><a href="https://chingari.io/" target="_blank">Chingari</a></td><td>Consumer</td><td>India</td><td>Social Media</td><td>Republic Crypto, Galaxy Digital, Solana Ventures, Valor Equity Partners, Kraken, Cipholio Ventures, Alameda Research</td></tr>
+        <tr><td><a href="https://landing.chiper.co/" target="_blank">Chiper</a></td><td>e-Commerce</td><td>Latam</td><td>B2B</td><td>Tiger Global, Alter Global, InQLab, Interplay Ventures, Nosara Capital</td></tr>
+        <tr><td><a href="https://www.treinta.co/" target="_blank">Trienta</a></td><td>Fintech</td><td>Latam</td><td>Digital Ledger / Accounting</td><td>Goodwater Capital, Luxor Capital, FJ Labs, Rhombuz VC, Outbound Ventures, Acacia Venture</td></tr>
+        <tr><td><a href="https://www.protenus.com/" target="_blank">Protenus</a></td><td>Healthcare</td><td>US</td><td>Analytics / AI</td><td>F-Prime, Kaiser Permanente, LionBird, Trasnformation Capital, Providence Ventures, Arthur Ventures</td></tr>
+        <tr><td><a href="http://www.array.io" target="_blank">Array</a></td><td>Fintech</td><td>US</td><td>Credit / Lending</td><td>Confidential</td></tr>
+        <tr><td><a href="http://www.loco.gg" target="_blank">Loco</a></td><td>Gaming</td><td>India</td><td>Live Streaming Platform</td><td>Sequioa, Hashed, Krafton, Hiro Capital, Lumikai</td></tr>
+        <tr><td><a href="http://www.yassir.com" target="_blank">Yassir</a></td><td>Mobility</td><td>Africa</td><td>Ride Sharing</td><td>DN Capital, Endeavor Catalyst. Quiet Capital, Spike Ventures, Moving Capital, WndrCo</td></tr>
+        <tr><td><a href="http://www.candidco.com" target="_blank">Candid</a></td><td>Healthcare</td><td>US</td><td> Personal Health</td><td>Bessemer Venture Partners, Blisce, Greyroft, Headline, Riverpark Ventures</td></tr>
+        <tr><td><a href="https://www.toothfairyapp.co.uk/" target="_blank">ToothFairy</a></td><td>Healthcare</td><td>UK</td><td>Personal Health</td><td>All Iron Ventures, Ada Ventures, Slingshot, Seedcamp</td></tr>
+        <tr><td><a href="http://www.zesty.com" target="_blank">Zesty</a></td><td>Cloud</td><td>Israel</td><td>Cloud Management</td><td>S Capital, M-Fund, Next-47</td></tr>
+        <tr><td><a href="http://www.getbanyan.com" target="_blank">Banyan</a></td><td>Fintech</td><td>US</td><td>Big Data / SaaS</td><td>Fin VC, TTV Capital, Citi Ventures, Motivate Ventures</td></tr>
+        <tr><td><a href="http://www.scripbox.com" target="_blank">Scripbox</a></td><td>Fintech</td><td>India</td><td>Wealth Management</td><td>Accel, TI Platform, Innoven Capital, Trifecta Capital</td></tr>
+        <tr><td><a href="http://www.questbook.app" target="_blank">Questbook</a></td><td>Web3</td><td>India</td><td>Decentralized University</td><td>Coinbase, Dragonfly Capital, Hashed, Spartan Capital, Balaji Srinivasan, Lemnis Cap</td></tr>
+        <tr><td><a href="https://www.myjar.app/" target="_blank">Jar</a></td><td>Fintech</td><td>India</td><td>Savings / Financial Management</td><td>Tribe Capital, Arkam Ventures, WEH Ventures</td></tr>
+        <tr><td><a href="https://tagme.pk/" target="_blank">TAG</a></td><td>Fintech</td><td>Pakistan</td><td>Digital Banking</td><td>Liberty City, Addition Ventures, Mantis Venture Capital, Banana Capital, Quiet Capital, Fatima Gobi Ventures , Polymath Digital, Khwarizmi Ventures</td></tr>
 
 
 
         <!-- Table between $50M and $100m -->
-        <tr><th>$50M &#8211; $100M</th></tr>
+        <!-- <tr><th>$50M &#8211; $100M</th></tr>
         <tr><td><a href="http://www.angel.co/india" target="_blank">AngelList India</a></td><td>Finance</td><td>India</td><td>Crowd Funding</td></tr>
         <tr><td><a href="https://www.lendenclub.com/" target="_blank">LendenClub</a></td><td>Fintech</td><td>India</td><td>Lending</td></tr>
         <tr><td><a href="https://www.withyotta.com/" target="_blank">Yotta Savings</a></td><td>Fintech</td><td>US</td><td>Banking</td></tr>
@@ -107,12 +106,12 @@
         <tr><td><a href="http://www.elmenus.com" target="_blank">Elemenus</a></td><td>Food Tech</td><td>MENA</td><td>Delivery Platform</td></tr>
         <tr><td><a href="http://www.dawaai.pk" target="_blank">Dawaai</a></td><td>Pharma</td><td>Pakistan</td><td>Ecommerce</td></tr>
         <tr><td><a href="https://audiomob.com/" target="_blank">AudioMob</a></td><td>Gaming</td><td>UK</td><td>In Game Mobile Ads</td></tr>
-        <tr><td><a href="https://www.swanbitcoin.com/" target="_blank">Swan Bitcoin</a></td><td>Crypto</td><td>US</td><td>Bitcoin Platform</td></tr>
+        <tr><td><a href="https://www.swanbitcoin.com/" target="_blank">Swan Bitcoin</a></td><td>Crypto</td><td>US</td><td>Bitcoin Platform</td></tr> -->
 
 
 
         <!-- Table between $0 and $50M -->
-        <tr><th>$0 &#8211; $50M</th></tr>
+        <!--<tr><th>$0 &#8211; $50M</th></tr>
         <tr><td><a href="https://playquell.com/" target="_blank">Quell</a></td><td>Consumer</td><td>US</td><td>Fitness</td></tr>
         <tr><td><a href="https://www.wareiq.com/" target="_blank">WareIQ</a></td><td>Logistics</td><td>India</td><td>e-Commerce</td></tr>
         <tr><td><a href="https://www.treasurefi.com/" target="_blank">Treasure</a></td><td>Fintech</td><td>US</td><td>SaaS</td></tr>
@@ -128,7 +127,7 @@
         <tr><td><a href="https://www.creditbook.pk/" target="_blank">CreditBook</a></td><td>Fintech</td><td>Pakistan</td><td>Payments / Lending / Digital Ledger</td></tr>
         <tr><td><a href="https://letz.app/en" target="_blank">Letz</a></td><td>Transport</td><td>Latam</td><td>Urban Mobility</td></tr>
         <tr><td><a href="https://www.dopay.com/" target="_blank">Dopay</a></td><td>Fintech</td><td>MENA</td><td>Payments</td></tr>
-        <!-- <tr><td><a href="https://enaible.io/" target="_blank">Enaible</a></td><td>AI / ML</td><td>US</td><td>Employee Productivty SaaS</td></tr>
+         <tr><td><a href="https://enaible.io/" target="_blank">Enaible</a></td><td>AI / ML</td><td>US</td><td>Employee Productivty SaaS</td></tr>
         <tr><td><a href="https://clicoh.com/" target="_blank">Clicoh</a></td><td>Logistics</td><td>Latam</td><td>e-Commerce</td></tr>
         <tr><td><a href="https://www.faction.us/" target="_blank">Faction Motors</a></td><td>EV</td><td>Global</td><td>Mobility</td></tr>
         <tr><td><a href="https://tryterra.co/" target="_blank">Terra</a></td><td>Healthcare</td><td>Global</td><td>Fitness / API</td></tr>
@@ -185,7 +184,7 @@
         </table>
     </div>
     <div class="all-companies-btn-div">
-        <a class="all-companies-btn" href="/Kube-Ventures/portfolio.html">View all companies....</a>
+        <a class="all-companies-btn" href="/portfolio.html">View all companies....</a>
     </div>
 </div>
 </div>
