--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
            margin-right: 250px;
        }
     </style>
-    <link rel="stylesheet" href="https://github.com/Shamseer88/Kube-Ventures/blob/d1a94d5b6f3617a61899e31209245b94e1580e55/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Portfolio- Kube Ventures</title>
 </head>
 <body>
