--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/Shamseer88/Kube-Ventures/blob/main/styles.css">
     <title>Kube Ventures</title>
 </head>
 <body>
     <div class=row>
         <div class="column">
     <div class="column-left">
-        <a href="index.html"><img class="logo" src="/KUBE Logo-Wht - Cyan.png" alt="kube-logo" ></a>
+        <a href="index.html"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
         <p class="main-description">Kube VC is a global venture firm <br>that backs exceptional founders and category-defining businesses.</p>
-        <a class="button" href="mailto:faiz@kubevc.com" >info@kubevc.com</a>
+        <a class="button" href="mailto:faiz@kubevc.com" >Learn More</a>
     </div>
 </div>
 <div class="column">
