--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class=row>
         <div class="column">
     <div class="column-left">
-        <a href="index.html"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
+        <a href="https://shamseer88.github.io/Kube-Ventures/"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
         <p class="main-description">Kube VC is a global venture firm <br>that backs exceptional founders and category-defining businesses.</p>
         <a class="button" href="mailto:faiz@kubevc.com" >Learn More</a>
     </div>
@@ -27,7 +27,7 @@
 <div class="column">
     <div class="column-right">
     <div class="navbar">
-        <a class="nav-a" href="portfolio.html">Portfolio</a>
+        <a class="nav-a" href="https://shamseer88.github.io/Kube-Ventures/portfolio.html">Portfolio</a>
         <!-- <a class="nav-a" href="network.html">Network</a> -->
       </div>
     <div class="table-div">
