--- a/portfolio.html
+++ b/portfolio.html
@@ -18,12 +18,12 @@
            margin-right: 250px;
        }
     </style>
-    <link rel="stylesheet" href="https://github.com/Shamseer88/Kube-Ventures/blob/main/styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <title>Portfolio- Kube Ventures</title>
 </head>
 <body>
     <div class="navbar-portfolio">
-        <a href="/index.html"><img class="small-logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="logo"></a>
+        <a href="https://shamseer88.github.io/Kube-Ventures/"><img class="small-logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="logo"></a>
         <!-- <a class="active" href="/portfolio.html">Portfolio</a> -->
         <!-- <a class="nav-a" href="network.html">Network</a> -->
       </div>
