--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
            margin-right: 250px;
        }
     </style>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Portfolio- Kube Ventures</title>
 </head>
 <body>
