--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
            margin-right: 250px;
        }
     </style>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://github.com/Shamseer88/Kube-Ventures/blob/main/styles.css">
     <title>Portfolio- Kube Ventures</title>
 </head>
 <body>
