--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </table>
     </div>
     <div class="all-companies-btn-div">
-        <a class="all-companies-btn" href="/portfolio.html">View all companies....</a>
+        <a class="all-companies-btn" href="https://shamseer88.github.io/Kube-Ventures/portfolio.html">View all companies....</a>
     </div>
 </div>
 </div>
