Changed email from faiz@kubevc.com to info@kubevc.com

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="column-left">
         <a href="https://shamseer88.github.io/Kube-Ventures/"><img class="logo" src="https://github.com/Shamseer88/Kube-Ventures/blob/main/KUBE%20Logo-Wht%20-%20Cyan.png?raw=true" alt="kube-logo" ></a>
         <p class="main-description">Kube VC is a global venture firm <br>that backs exceptional founders and category-defining businesses.</p>
-        <a class="button" href="mailto:faiz@kubevc.com" >Learn More</a>
+        <a class="button" href="mailto:info@kubevc.com" >Learn More</a>
     </div>
 </div>
 <div class="column">
