--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
           <h1 class="portfolio-heading">PORTFOLIO</h1>
           <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique maxime odio dolores laborum</p>
       </div>
-    <div class="portfolio-table-div">
+    <div class="table-div">
         <table class="portfolio-table">
     
     
