removed portfolio description, changed a hover effect

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
       </div>
       <div>
           <h1 class="portfolio-heading">PORTFOLIO</h1>
-          <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique maxime odio dolores laborum</p>
+          <!-- <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique maxime odio dolores laborum</p> -->
       </div>
     <div class="table-div">
         <table class="portfolio-table">
